# foros

foros/: CMakeLists.txt  package.xml
foros/include/akit/failover/foros/: cluster_node.hpp
foros/src/: cluster_node.cpp  cluster_node_impl.cpp  cluster_node_impl.hpp  cluster_node_options.cpp
foros/src/lifecycle/state/: standby.cpp
foros/src/raft/: context.cpp  context.hpp  context_store.cpp  other_node.cpp  other_node.hpp  state_machine.cpp  state_machine.hpp
foros_msgs/srv/: RequestVote.srv
hello_cluster/: CMakeLists.txt  package.xml
hello_cluster/src/: hello_cluster.cpp  sensor_node.cpp
